// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with control buttons enabled 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-code-editor"
  >
    <div
      class="pf-v6-c-code-editor__container"
      role="presentation"
      tabindex="0"
    >
      <div
        class="pf-v6-c-code-editor__header"
      >
        <div
          class="pf-v6-c-code-editor__header-content"
        >
          <div
            class="pf-v6-c-code-editor__controls"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-label="Copy code to clipboard"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M28 7v22.607c0 .768-.622 1.393-1.387 1.393H10a1 1 0 1 1 0-2h16V7a1 1 0 1 1 2 0Zm-5.25 17.5v-22c0-.689-.561-1.25-1.25-1.25h-8.375v7.364c0 .833-.678 1.511-1.512 1.511H4.25V24.5c0 .689.561 1.25 1.25 1.25h16c.689 0 1.25-.561 1.25-1.25ZM10.875 1.275a.738.738 0 0 0-.405.195l-6 6a.738.738 0 0 0-.195.405h6.6v-6.6Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              style="display: contents;"
            >
              <button
                aria-label="Upload code"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M30 29a1 1 0 0 1-1 1H3a1 1 0 1 1 0-2h26a1 1 0 0 1 1 1ZM7.707 12.707 15 5.414V24a1 1 0 1 0 2 0V5.414l7.293 7.293a.997.997 0 0 0 1.414 0 .999.999 0 0 0 0-1.414l-8.646-8.647a1.5 1.5 0 0 0-2.121 0l-8.647 8.647a.999.999 0 1 0 1.414 1.414Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              style="display: contents;"
            >
              <button
                aria-label="Download code"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 32 32"
                    width="1em"
                  >
                    <path
                      d="M30 29a1 1 0 0 1-1 1H3a1 1 0 0 1 0-2h26a1 1 0 0 1 1 1Zm-15.061-4.646c.292.292.676.438 1.061.438s.768-.146 1.061-.438l8.646-8.646a.999.999 0 1 0-1.414-1.414L17 21.587V3a1 1 0 0 0-2 0v18.586l-7.293-7.293a.999.999 0 1 0-1.414 1.414l8.646 8.646Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-code-editor__main"
      >
        <input
          hidden=""
          style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          tabindex="-1"
          type="file"
        />
        <div
          class="pf-v6-c-code-editor__code"
          dir="ltr"
          tabindex="0"
        >
          <div
            data-testid="mock-editor"
            data-theme="pf-v6-theme-light"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches snapshot without props 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-code-editor"
  >
    <div
      class="pf-v6-c-code-editor__header"
    />
    <div
      class="pf-v6-c-code-editor__main"
    >
      <input
        hidden=""
        style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        tabindex="-1"
        type="file"
      />
      <div
        class="pf-v6-c-code-editor__code"
        dir="ltr"
        tabindex="0"
      >
        <div
          data-testid="mock-editor"
          data-theme="pf-v6-theme-light"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
